# wadeulwadeul-heroes-be

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  Dockerfile  Jenkinsfile  README.md  SECURITY.md  alembic.ini  pyproject.toml  temp.md  wadeulwadeul_local.db
alembic/: env.py
alembic/versions/: 4db9219e4010_변경_내용.py  9b043473e2e7_initial_migration.py
app/: __init__.py  main.py
app/api/routes/: classes.py  experience_plan.py  health.py  heroes.py  users.py
app/core/: auth.py  config.py  database.py
app/libs/: openai_client.py
app/models/: __init__.py  class_.py  enrollment.py  hero.py  user.py
app/prompts/: __init__.py  experience_plan.py  materials_suggestion.py  steps_suggestion.py
database/: README.md
database/postgres/base/: init.sql  kustomization.yaml  pg_hba.conf  postgresql.conf  secret.yaml  seed_test_data.sql  service.yaml  statefulset.yaml
k8s/: DEPLOYMENT.md  JENKINS.md  README.md
k8s/backend/: backend.yaml  ingress.yaml  kustomization.yaml  migration-job.yaml
k8s/backend/config/: .env  secret.yaml  (+2 more)
llm/: build_index.py  config.py  example_rag_usage.py  rag_retriever.py  visitjeju_api.py
llm/output/: embedding_cache.json  visitjeju_all_items.csv  visitjeju_metadata.json  visitjeju_workshops.csv  visitjeju_workshops.json
llm/tests/: test_build_index.py  test_integration.py  test_rag_retriever.py
tests/: conftest.py  test_auth.py  test_class_enrollments_for_creator.py  test_classes.py  test_config.py  test_db_schema_files.py  test_enrollments.py  test_gpt_api.py  test_prompts_allowed_categories.py  test_prompts_rag.py
(+1 files in other folders)
